[package]
name = "maze"
version = "0.1.0"
authors = ["João Delgado <joaomtdelgado@gmail.com>"]

[dependencies]
piston-app = { git = "https://github.com/joaodelgado/piston-app", rev = "8ac6b67" }
piston = "0.36.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.52.0"
pistoncore-glutin_window = "0.45.3"
rand = "0.4.2"
structopt = "0.2.6"
structopt-derive = "0.2.6"
